WOLO-00 logic for organisation translation
